# mcp-boilerplate-rust

./: .env.example  .gitignore  .rules  API.md  CHANGELOG.md  CLAUDE.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  Cargo.toml  DEADLOCK_FIX_REPORT.md  DOCS_REORGANIZED.md  DOCUMENTATION_UPDATE_2025-01-17.md  Dockerfile  E2E_TESTING_CHEATSHEET.md  LICENSE  Makefile  NEXT_SESSION.md  NEXT_SESSION_CHECKLIST.md  PHASE3_COMPLETION_REPORT.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PR_DESCRIPTION.md  QUICK_START.md  README.md  RELEASE_V0.5.0.md  SCRIPTS.md  START_HERE.md  TRANSPORT_COMPLETE_SUMMARY.md  TRANSPORT_PHASE1_PROGRESS.md  TRANSPORT_PHASE2_PROGRESS.md  TRANSPORT_START_HERE.md  build.rs  claude.md  deny.toml  docker-compose.postgrest.yml  docker-compose.yml  ecosystem.config.cjs  generate_image.py  justfile  setup.sh  (+9 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ai-integration-tests.yml  ci.yml  e2e-tests.yml  security.yml
crates/mcp-core/: Cargo.toml
crates/mcp-core/src/: error.rs  lib.rs  messages.rs  traits.rs
crates/mcp-http-bridge/: Cargo.toml
crates/mcp-http-bridge/src/: lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: builder.rs  error.rs  lib.rs  registry.rs  server.rs
crates/mcp-transport/: Cargo.toml
crates/mcp-transport/src/: error.rs  http.rs  lib.rs  stdio.rs  transport.rs
deployment/: verify-deployment.sh
deployment/docker/: build.sh  (+8 more)
docs/: AI_TOOL_PATTERN.md  API.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_STATUS.md  INDEX.md  INSTALLATION.md  NATIVE_STDIO_GUIDE.md  OFFICIAL_SDK_INTEGRATION.md  PERFORMANCE_GUIDE.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  PROMPTS_AND_RESOURCES.md  PROTOCOL_REFACTORING_SUMMARY.md  PROTOCOL_UPGRADE_GUIDE.md  README.md  REFACTORING_COMPLETE_SUMMARY.md  REPOSITORY_SECURITY_GUIDE.md  SECURITY_GUIDE.md  SERVER_DEVELOPMENT_GUIDE.md  SETUP.md  STDIO_WRAPPER_INTEGRATION.md  TOOL_QUICK_REFERENCE.md  TRANSPORTS.md  TRANSPORT_ADVANCED_SUMMARY.md  TRANSPORT_QUICK_GUIDE.md  TRANSPORT_QUICK_REFERENCE.md  TRANSPORT_QUICK_START.md
examples/: advanced_features_demo.md  claude_desktop_config_binary.json  claude_desktop_config_db.json  claude_desktop_config_http_wrapper.json  claude_desktop_config_stdio.json  mcp_2025_11_25_features.rs  sse_client.html  sse_test_client.html  websocket_test_client.html
examples/agent-integration-patterns/custom-rust-agent/: Cargo.toml
examples/agent-integration-patterns/custom-rust-agent/src/: main.rs
examples/agent-integration-patterns/custom-rust-agent/templates/: task_prompt.hbs
examples/creative-content-server/: Cargo.toml  README.md
examples/creative-content-server/src/: main.rs
examples/filesystem-server/: Cargo.toml
examples/filesystem-server/src/: main.rs
examples/image-generation-server/: Cargo.toml  README.md
examples/image-generation-server/src/: main.rs
examples/multi-server-coordination/content-pipeline/: Cargo.toml  README.md
examples/multi-server-coordination/content-pipeline/src/: health_check.rs  main.rs
generated_content/: sample_blog_20250918_024428.md  sample_character_20250918_024428.txt  sample_poem_20250918_024428.txt  sample_story_20250918_024428.txt
proto/: mcp.proto
scripts/: README.md  check-file-sizes.sh  integration_test.sh  postgrest-setup.sql  run.sh  run_e2e_tests.sh  setup-development.sh  test-db-integration.sh  test-db-mcp-smoke.sh  test-stdio-wrapper.sh  test.sh  test_calculator.sh  test_http.sh  test_http_wrapper.sh  test_image_generation_server.sh  test_mcp.sh  test_output_schemas.sh  test_prompts_resources.sh  test_sse.sh  test_validation.sh  verify-setup.sh  verify_claude_ready.sh
sdk-generators/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  test-sdks.sh
sdk-generators/output/go/: go.mod
sdk-generators/output/go/mcpclient/: client.go
sdk-generators/output/python/: mcp_client.py
sdk-generators/output/rust/: Cargo.toml  README.md  mcp_client.rs
sdk-generators/output/typescript/: mcp-client.ts  package.json
sdk-generators/src/: main.rs
sdk-generators/src/generators/: rust_gen.rs
sdk-generators/templates/: go-example.go  python-example.py  typescript-example.ts
servers/analytics-server/: Cargo.toml
servers/analytics-server/src/: main.rs
servers/api-gateway-server/: Cargo.toml
servers/api-gateway-server/src/: main.rs
servers/database-server/: Cargo.toml
servers/database-server/src/: main.rs
servers/filesystem-server/: Cargo.toml  README.md
servers/filesystem-server/src/: main.rs
servers/test-server/: Cargo.toml
servers/test-server/src/: main.rs
servers/workflow-server/: Cargo.toml
servers/workflow-server/src/: main.rs
sessions/: .gitkeep
src/: main.rs  types.rs
tasks/: lessons-phase-e-s3upload-20260304.md  lessons-phase-e-textgen-20260304.md  todo-phase-e-s3upload-20260304.md  todo-phase-e-textgen-20260304.md
templates/api-wrapper-template/: Cargo.toml  README.md  justfile
templates/api-wrapper-template/src/: main.rs
templates/api-wrapper-template/tests/: integration_tests.rs
templates/authenticated-server-template/: Cargo.toml  README.md  justfile
templates/authenticated-server-template/src/: lib.rs  main.rs
templates/authenticated-server-template/tests/: integration.rs
templates/basic-server-template/: Cargo.toml  README.md  justfile
templates/basic-server-template/src/: main.rs
templates/database-integration-template/: Cargo.toml  README.md  justfile
templates/database-integration-template/src/: main.rs
templates/database-integration-template/tests/: integration.rs  security.rs
test-results/: e2e-test-report.md
tests/: blog_generation_server_e2e.rs  comprehensive_integration.rs  creative_content_server_e2e.rs  filesystem_server_e2e.rs  filesystem_server_practical_e2e.rs  gemini_integration_blog_e2e.rs  image_generation_server_e2e.rs  integration_basic.rs  integration_e2e.rs  performance_e2e.rs  protocol_compliance.rs  resilience_e2e.rs  transport_e2e.rs
tests-runner/: Cargo.toml
tests-runner/src/: main.rs
(+148 files in other folders)
