[package]
name = "mcp-boilerplate-rust"
version = "0.3.1"
edition = "2021"
authors = ["NetADX MCP Team"]
description = "MCP v5 Rust boilerplate using official rust-sdk (stdio primary, HTTP optional)"
license = "MIT"
repository = "https://github.com/netadx/mcp-boilerplate-rust"

[[bin]]
name = "mcp-boilerplate-rust"
path = "src/main.rs"

[dependencies]
# Core MCP dependencies (always required)
rmcp = { path = "../rust-sdk/crates/rmcp", features = ["server", "macros", "transport-io"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
async-trait = "0.1"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenv = "0.15"

# HTTP feature (optional)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }

# SSE feature (optional)
tokio-stream = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
async-stream = { version = "0.3", optional = true }

# WebSocket feature (optional)
tokio-tungstenite = { version = "0.21", optional = true }

# Database feature (optional)
mongodb = { version = "2.8", optional = true }

# Auth feature (optional)
jsonwebtoken = { version = "9.2", optional = true }

[features]
# Default: MCP stdio only
default = []

# Optional features
http = ["dep:axum", "dep:tower", "dep:tower-http"]
sse = ["dep:axum", "dep:tower", "dep:tower-http", "dep:tokio-stream", "dep:futures", "dep:async-stream"]
websocket = ["dep:axum", "dep:tower", "dep:tower-http", "dep:tokio-tungstenite", "dep:futures"]
database = ["dep:mongodb"]
auth = ["dep:jsonwebtoken"]

# All features
full = ["http", "sse", "websocket", "database", "auth"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true