[package]
name = "mcp-dautruongvui-be"
version = "0.1.0"
edition = "2021"
authors = ["NetADX MCP Team"]
description = "MCP backend for Đấu Trường Vui - Rust + rmcp + Axum"
license = "MIT"

[[bin]]
name = "mcp-dautruongvui-be"
path = "src/main.rs"

[dependencies]
# Core MCP dependencies (always required)
rmcp = { path = "../rust-sdk/crates/rmcp", features = ["server", "macros", "transport-io"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
async-trait = "0.1"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }

# Auth
bcrypt = "0.15"
jsonwebtoken = { version = "9.2", optional = true }

# HTTP streaming (Axum)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
futures = { version = "0.3", optional = true }

[features]
default = []
http-stream = ["dep:axum", "dep:tower", "dep:tower-http", "dep:futures"]
auth = ["dep:jsonwebtoken"]
postgres = []
full = ["http-stream", "postgres", "auth"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true