[package]
name = "tests-runner"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Testing dependencies
tempfile = "3.0"
reqwest = { version = "0.11", features = ["json"] }
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.0"
futures = "0.3"
libc = "0.2"

# Workspace dependencies
mcp-core = { path = "../crates/mcp-core" }
mcp-server = { path = "../crates/mcp-server" }
mcp-transport = { path = "../crates/mcp-transport" }

[dev-dependencies]
rstest = "0.18"
tokio-test = "0.4"

[[test]]
name = "integration_e2e"
path = "../tests/integration_e2e.rs"

[[test]]
name = "performance_e2e"
path = "../tests/performance_e2e.rs"

[[test]]
name = "resilience_e2e"
path = "../tests/resilience_e2e.rs"

[[test]]
name = "protocol_compliance"
path = "../tests/protocol_compliance.rs"

[[test]]
name = "transport_e2e"
path = "../tests/transport_e2e.rs"

[[test]]
name = "integration_basic"
path = "../tests/integration_basic.rs"

[[test]]
name = "filesystem_server_e2e"
path = "../tests/filesystem_server_e2e.rs"

[[test]]
name = "filesystem_server_practical_e2e"
path = "../tests/filesystem_server_practical_e2e.rs"

[[test]]
name = "image_generation_server_e2e"
path = "../tests/image_generation_server_e2e.rs"

[[test]]
name = "blog_generation_server_e2e"
path = "../tests/blog_generation_server_e2e.rs"

[[test]]
name = "creative_content_server_e2e"
path = "../tests/creative_content_server_e2e.rs"

[[test]]
name = "gemini_integration_blog_e2e"
path = "../tests/gemini_integration_blog_e2e.rs"