[package]
name = "mcp-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types and traits for the Model Context Protocol (MCP) in Rust"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
rstest = { workspace = true }

[features]
default = []