[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Server framework for the Model Context Protocol (MCP) in Rust"

[dependencies]
mcp-core = { path = "../mcp-core" }
mcp-transport = { path = "../mcp-transport" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1"
uuid = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
rstest = { workspace = true }

[features]
default = []