[package]
name = "mcp-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Transport layer implementations for the Model Context Protocol (MCP) in Rust"

[dependencies]
mcp-core = { path = "../mcp-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
uuid = { workspace = true }

# HTTP transport dependencies
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }

# STDIO transport dependencies
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tokio-test = { workspace = true }
rstest = { workspace = true }

[features]
default = ["stdio", "http"]
stdio = []
http = ["axum", "tower", "tower-http", "hyper"]