[package]
name = "filesystem-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP filesystem operations server example"

[[bin]]
name = "filesystem-server"
path = "src/main.rs"

[dependencies]
mcp-core = { path = "../../crates/mcp-core" }
mcp-transport = { path = "../../crates/mcp-transport" }
mcp-server = { path = "../../crates/mcp-server" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["stdio", "http"]
stdio = ["mcp-transport/stdio"]
http = ["mcp-transport/http"]