[package]
name = "image-generation-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP AI image generation server example"

[[bin]]
name = "image-generation-server"
path = "src/main.rs"

[dependencies]
mcp-core = { path = "../../crates/mcp-core" }
mcp-transport = { path = "../../crates/mcp-transport" }
mcp-server = { path = "../../crates/mcp-server" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
urlencoding = "2.1"

[features]
default = ["stdio", "http"]
stdio = ["mcp-transport/stdio"]
http = ["mcp-transport/http"]