[package]
name = "api-gateway-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Production MCP server for external API integration with authentication and transformation"

[[bin]]
name = "api-gateway-server"
path = "src/main.rs"

[dependencies]
# Official MCP SDK with required features
rmcp = { version = "0.6.3", features = ["server", "transport-io"] }

# HTTP bridge for transport support
mcp-http-bridge = { path = "../../crates/mcp-http-bridge" }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# JSON Schema generation (must match RMCP version)
schemars = "1.0.4"

# Time handling
chrono = { workspace = true, features = ["serde"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# CLI
clap = { workspace = true, features = ["derive"] }

# UUID generation
uuid = { workspace = true, features = ["v4", "serde"] }

# External API integration
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
url = "2.4"
base64 = "0.21"

# Data structures and utilities
dashmap = "5.5"

# Authentication and encoding
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
fast-build = []