[package]
name = "filesystem-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP filesystem operations server using official RMCP SDK"

[[bin]]
name = "filesystem-server"
path = "src/main.rs"

[dependencies]
# Official MCP SDK
rmcp = { version = "0.6.3", features = ["server"] }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# CLI
clap = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Filesystem utilities
walkdir = "2.5"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"

[features]
default = []