[package]
name = "database-integration-template"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Database Integration Template - Production-ready MCP server with database access patterns"

[[bin]]
name = "database-server"
path = "src/main.rs"

[dependencies]
# Official MCP SDK with required features
rmcp = { version = "0.6.3", features = ["server", "transport-io"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# JSON Schema generation (must match RMCP version)
schemars = "1.0.4"

# Time handling
chrono = { workspace = true, features = ["serde"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# CLI
clap = { workspace = true, features = ["derive"] }

# UUID generation
uuid = { workspace = true, features = ["v4", "serde"] }

# SQL parsing and validation
sqlparser = "0.39"

# Concurrent hash maps for caching
dashmap = "5.5"

# Regular expressions for query validation
regex = "1.10"

# Database dependencies (choose based on your database)
# PostgreSQL support
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], optional = true }
deadpool = { version = "0.10", optional = true }
deadpool-postgres = { version = "0.12", optional = true }

# SQLite support
rusqlite = { version = "0.30", features = ["chrono", "uuid", "bundled"], optional = true }

# MySQL support  
mysql = { version = "25.0", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[features]
default = ["sqlite"]

# Database engine features
postgres = ["dep:sqlx", "dep:deadpool", "dep:deadpool-postgres"]
sqlite = ["dep:rusqlite"] 
mysql = ["dep:mysql"]

# Mock database for development/testing
mock-db = []

# Fast build for development
fast-build = []